--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ djangorestframework==3.16.1
 gunicorn==25.1.0
 jmespath==1.1.0
 packaging==26.0
+pillow==12.1.1
 psycopg==3.3.3
 psycopg-binary==3.3.3
 python-dateutil==2.9.0.post0
