--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ boto3==1.42.53
 botocore==1.42.53
 dj-database-url==3.1.2
 Django==6.0.2
+django-axes==8.3.1
+django-csp==4.0
 django-storages==1.14.6
 djangorestframework==3.16.1
 gunicorn==25.1.0
